os-files/kustomize/env/at/routes/mail-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mail
spec:
  host: mail-openshiftEnvKey.apps.org-env-0.org.innovateuk.ukri.org
  port:
    targetPort: 4443-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: mail
    weight: 100
